--- a/witch.html
+++ b/witch.html
@@ -3,13 +3,13 @@
 <head>
 <meta charset="utf-8">
 <title>The White Witch of RoseHall</title>
-	<link href="CSS/style.css" rel="stylesheet" type="text/css">
-	<script src="JavaScript/rosehall.js"></script>
+	<link href="style.css" rel="stylesheet" type="text/css">
+	<script src="rosehall.js"></script>
 </head>
 
 <body>
 	
-	<img src='CSS/SVG/rosehall.png'>
+	<img src='rosehall.png'>
 	<div id='top'>
 		<h1 class='head'>
 		<ul>
